-----2.12.0 (XX) -----
New features:
	* [import]
		* Download datasets from kaggle.com
		* Support MCAP file import
		* show error messages for the serial port in when creating a live data source to notify directly about missing device permissions, etc.
		* add warning when importing projects in file import dialog
		* improve error messages for data import
		* fix preview of data with header
	* [analysis]
		* Add possibility to do calculations on curves
	* [spreadsheet]
		* support periodic and random sampling as function: psample(n;x), rsample(x)
		* save the properties used to generate random values in the column for later re-use
		* allow to perform the distribution fit to the data directly from the spreadsheet
	* [worksheet] 
		* new visualization type "Process Behavior Chart"
		* more space for plots and less "ink" - no layout spacings, no minor grid lines, not plot borders, no ticks on secondary axes on default
		* allow to provide names for plot ranges for easier lookup and assignemnt in the plot elements

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog
	* Properly draw the border line of the symbol in the legend (BUG 491310)
	* Show Ticks on inverted axes (BUG 491502 & 492475)
	* Fixed add/subtract value functionality in Matrix (BUG 493523)

Internal:
	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
	* switch to Qt6 only


-----2.11.1 (16.07.2024) -----
Bug fixes:
	* Improve ODS support (selected platforms only)
	* Fixed the initial positioninig of the docks, should be put besides each other and not below
	* Don't try to restore the window size when starting for the first time, let the window manager do the initial size
	* Don't crash when opening a project which a hidden spreadsheet view
	* Fixed the background color of the sparklines in the spreadsheet
	* Fixed copy&paste and duplication of the matrix


-----2.11.0 (09.07.2024) -----
New features:
	* [general]
		* New application theme "Dracula"