@@ -1,5 +1,7 @@
 -----2.12.0 (XX) -----
 New features:
+	* [general]
+		* Detail info view mode in the Color Maps Browser
 	* [import]
 		* Download datasets from kaggle.com
 		* Support MCAP file import
